Enhance code folding feature to support inline timelines and improve UI interactions